--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
     <button type="button" class="border-primary btn btn-outline-primary mb-3 mt-3 read_next" ><a class="non_link_text" href='/2023/11/hi-blog-setup.html' >read this article</a></button>
   </footer>
 </article>
-              <footer>
+              <footer class="bg-transparent">
                 <hr />
                 <p><a href="https://t.me/IdanMaman" target="blank" title="social telegram"><i
                        class="fa-brands fa-bounce fa-xl  fa-telegram"></i></a>
@@ -156,7 +156,7 @@
                    <a href="https://twitter.com/idanmaman451180" target="blank" title="social twitter"><i
                        class="fa-brands fa-bounce fa-xl  fa-twitter"></i></a>
                 </p>
-                <p>Site generated
+                <p class="bg-transparent">Site generated
                   by <a class="link-warning" href="https://github.com/greghendershott/frog">Frog</a>,
                   the <strong>fr</strong>ozen bl<strong>og</strong> tool.</p>
                 <p>Using
@@ -174,8 +174,8 @@
           </div>
         </div>
       </div>
-      <div style="position: relative; width: 100%; height: 100vh; overflow: hidden;">
-        <canvas id="myCanvas" style="position: sticky; top: 0; left: 0; touch-action: none; width: 100%; height: 100%;"></canvas>
+      <div style="position: sticky; width: 100%; height: 100%; overflow: hidden;">
+        <canvas id="myCanvas" style="touch-action:none;width: 100%; height: 100%"></canvas>
       </div>
 
     </div>
