--- a/About.html
+++ b/About.html
@@ -126,7 +126,7 @@ thanks to Racket , scribble and Frog for allowing me to create this cool blog .
 
  <br />
 <a href="https://github.com/idanmaman2/idanmaman2.github.io"><img src="/About/pict_2.png" alt="image" height="66" style="vertical-align: 0px; margin: -3px -3px -3px -3px;" width="56" /></a></p>
-              <footer>
+              <footer class="bg-transparent">
                 <hr />
                 <p><a href="https://t.me/IdanMaman" target="blank" title="social telegram"><i
                        class="fa-brands fa-bounce fa-xl  fa-telegram"></i></a>
@@ -137,7 +137,7 @@ thanks to Racket , scribble and Frog for allowing me to create this cool blog .
                    <a href="https://twitter.com/idanmaman451180" target="blank" title="social twitter"><i
                        class="fa-brands fa-bounce fa-xl  fa-twitter"></i></a>
                 </p>
-                <p>Site generated
+                <p class="bg-transparent">Site generated
                   by <a class="link-warning" href="https://github.com/greghendershott/frog">Frog</a>,
                   the <strong>fr</strong>ozen bl<strong>og</strong> tool.</p>
                 <p>Using
@@ -155,8 +155,8 @@ thanks to Racket , scribble and Frog for allowing me to create this cool blog .
           </div>
         </div>
       </div>
-      <div style="position: relative; width: 100%; height: 100vh; overflow: hidden;">
-        <canvas id="myCanvas" style="position: sticky; top: 0; left: 0; touch-action: none; width: 100%; height: 100%;"></canvas>
+      <div style="position: sticky; width: 100%; height: 100%; overflow: hidden;">
+        <canvas id="myCanvas" style="touch-action:none;width: 100%; height: 100%"></canvas>
       </div>
 
     </div>
