--- a/_src/post-template.html
+++ b/_src/post-template.html
@@ -1,15 +1,16 @@
 <article>
   <header>
     <h1>@|title|</h1>
-    <p class='date-and-tags'>@|date| :: @|tags|</p>
-    <p class='authors'>By: @|authors|</p>
+    <p class='date-and-tags' id="gsap_date">@|date| :: @|tags|</p>
+    <p class='authors' id="gsap_author">By: @|authors|</p>
   </header>
-  @|content|
+  <div id="gsap_content" style="display:none;">
+    @|content|
+  </div>
   <footer>
     <hr />
     <h1 style="font-weight: lighter;">Comments</h1>
       <div id="disqus_thread"></div>
-
       <div>
         @disqus-comments["idhm-blog"]
       </div>
@@ -21,4 +22,7 @@
     </div>
   </footer>
   <script type="text/javascript" src="@|uri-prefix|/js/text_highlight.js"></script>
+  <script type="text/javascript" src="@|uri-prefix|/css/gsap-public/minified/gsap.min.js"></script>
+  <script type="text/javascript" src="@|uri-prefix|/js/gsap_animations.js"></script>
+
 </article>
