--- a/_src/page-template.html
+++ b/_src/page-template.html
@@ -129,7 +129,7 @@
               <div class="mb-5 alert alert-primary bg-primary bg-opacity-25 text-center" role="alert">
                 <h1 class="alert-heading display-5">SUPDAWG? </h1>
                 <p class="h5 mt-2 font-weight-light"> Idan Maman's Personal Blog <i
-                    class="fa-solid fa-xl fa-kiwi-bird "></i>
+                    class="fa-solid fa-xl fa-kiwi-bird  bird-theme" ></i>
                 </p>
               </div>
               })
