--- a/_src/post-template.html
+++ b/_src/post-template.html
@@ -1,10 +1,13 @@
 <article>
+  <link rel="stylesheet" type="text/css" href="@|uri-prefix|/css/post_costum.css">
+
+
   <header>
     <h1>@|title|</h1>
     <p class='date-and-tags' id="gsap_date">@|date| :: @|tags|</p>
     <p class='authors' id="gsap_author">By: @|authors|</p>
   </header>
-  <div id="gsap_content" style="display:none;">
+  <div id="gsap_content" style="display:none; ">
     @|content|
   </div>
   <footer>
